# vre_rocrate

./: .gitignore  README.md  pyproject.toml
examples/: example-ro-crate.json  galaxy.py  mddash.py  sciencemesh.py  vip.py
plans/: rocrate-fixtures-cleanup.md  structure-refactor.md  test-migration.md
src/vre_rocrate/: __init__.py  builder.py  constants.py  exceptions.py  minimal.py  models.py  parser.py  validator.py
src/vre_rocrate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/vre_rocrate/building/: __init__.py  package.py  rocrate.py
src/vre_rocrate/models/: __init__.py  infrastructure.py  minimal.py  package.py  rocrate.py
src/vre_rocrate/parsing/: __init__.py  infrastructure.py  minimal.py  parser.py  validator.py
tests/: conftest.py
tests/fixtures/alphafind-notebook/: ro-crate-metadata.json  simple_example.json
tests/fixtures/galaxy/: ro-crate-metadata.json  simple_example.json
tests/fixtures/galaxy_and_onedata/: ro-crate-metadata.json  simple_example.json
tests/fixtures/galaxy_tosca/: ro-crate-metadata.json
tests/fixtures/galaxy_tosca_stage/: ro-crate-metadata.json
tests/fixtures/jupyter/: notebook.ipynb  ro-crate-metadata.json  simple_example.json
tests/fixtures/oscar/: cowsay.json  ro-crate-metadata.json  simple_example.json
tests/fixtures/oscar_tosca/: ro-crate-metadata.json
tests/fixtures/sciencemesh/: ro-crate-metadata.json  simple_example.json
tests/test_building/: test_package.py  test_rocrate.py
tests/test_models/: test_minimal.py  test_package.py
tests/test_parsing/: test_parser.py  test_validator.py
(+5 files in other folders)
