[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vre-rocrate"
version = "0.1.0"
description = "RO-Crate parsing, validation, building, and minimal-VRE request handling for VRE dispatcher"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "rocrate>=0.13.0",
    "pydantic>=2.7.0,<3.0.0",
    "fastapi>=0.113.0,<0.114.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.2",
    "black>=25.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
